2023-05-03  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (usage): -s option
        * tmstatus.sh (usage): -p option
        * tmstatus.sh (status): fix the output if the finding changes progress is 100%

2023-05-02  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: if the logs are read, display the backup speed
        * tmstatus.sh (status): Shorten the %/s if less then 1
        * tmstatus.sh (status): Handle a speed of '-'

2023-04-02  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: filter out spurious df errors

2023-03-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Percent of work done by finding changes

2023-03-24  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Warn if --today is specified and the time machine is offline

2023-03-20  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Number of backups today

2023-03-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: --today option

2023-02-16  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Some more filtering

2023-02-07  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh.completion: bash completion
        * tmstatus.sh: --quick option

2023-02-03  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Show log files

2023-01-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Refactoring: do not call the same tmutil command more than once

2022-08-31  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Available space in %

2022-08-18  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Parse LazyThinning

2022-08-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: corrected the backup size (current backup & total size)

2021-11-15  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Error message if Full Disk Access is required
        * tmstatus.sh: General cleanup with ShellCheck
        * tmstatus.sh(status): Fixed the processing of the remaining time
